<resources>
    <string name="app_name">Model Pelestarian Tradisi\nLisan Beluk</string>
    <string name="img_sawah">Sawah</string>
    <string name="dok">Dokumentasi\nPertunjukan Beluk.</string>
    <string name="beranda">Beranda</string>
    <string name="latihan">Latihan</string>
    <string name="ringkasan">Ringkasan Cerita Naskah Wawacan</string>
    <string name="aspek">Aspek Kelisanan Pada Tradisi Lisan Beluk</string>
    <string name="nilai">Nilai Kearifan Lokal</string>
    <string name="berikut_video">Berikut beberapa video dari latihan Beluk</string>
    <string name="tonton_btn">Tonton Videonya</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="text_description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. </string>
    <string name="video_latihan">Video Latihan</string>
</resources>
