<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.rmf.modelpelestariantradisilisanbeluk.MyScrollView
        android:id="@+id/beranda_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:contentDescription="@string/img_sawah"
                android:scaleType="centerCrop"
                android:src="@drawable/wp3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.095"
                android:paddingTop="@dimen/padding">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:textSize="@dimen/HeaderSize"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>
                <TextView
                    android:shadowColor="@color/colorBlack"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="4"
                    android:textStyle="bold"
                    android:layout_marginTop="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dok"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/HeaderSizeBig" />
                <Button
                    android:id="@+id/btn_tonton"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:background="@drawable/button"
                    android:padding="@dimen/padding"
                    android:textColor="@color/colorWhite"
                    android:text="@string/tonton_btn"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ringkasan"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/HeaderSize"
                    android:layout_marginBottom="@dimen/margin_bottom_header_textt"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aspek"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/HeaderSize"
                    android:layout_marginTop="@dimen/margin_top_header_text"
                    android:layout_marginBottom="@dimen/margin_bottom_header_textt"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_image1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clipToPadding="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding">

                <TextView
                    android:id="@+id/nilai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nilai"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/HeaderSize"
                    android:layout_marginTop="@dimen/margin_top_header_text"
                    android:layout_marginBottom="@dimen/margin_bottom_header_textt"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_image2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="40dp"
                    android:layoutAnimation="@anim/layout_animation_from_right"
                    android:clipToPadding="false" />
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </com.rmf.modelpelestariantradisilisanbeluk.MyScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>