<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >



    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:autoPlay="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:videoId="VpU5VkFQ2rE"
        />

    <LinearLayout
        android:id="@+id/layout_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:paddingRight="@dimen/padding"

        android:paddingBottom="@dimen/padding"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtube_player"
        tools:targetApi="m">

        <TextView
            android:id="@+id/judul_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deskripsi"
            android:textColor="@color/colorPrimary2"
            android:textSize="@dimen/HeaderSize2"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_weight="0"
            android:contentDescription="@string/video_latihan"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_deskripsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:text="@string/text_description"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_deskripsi" />

    <View
        android:id="@+id/line_horizon"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_deskripsi" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_horizon"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_deskripsi" />


</androidx.constraintlayout.widget.ConstraintLayout>